[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/scripts/dummy.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/stopsign2.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/sfx/sfx_destorymetal.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sprites/metalpartical_1.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/metalpartical_3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/metalpartical_4.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/bluestop.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/sotpsign.png" type="Texture" id=8]
[ext_resource path="res://assets/sound/sfx/sfx_punch2.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/sfx/sfx_punch1.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/scripts/randompitch.gd" type="Script" id=11]
[ext_resource path="res://assets/sound/sfx/sfx_punch3.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sprites/stopsignreverse.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/stopsignfancy.png" type="Texture" id=14]
[ext_resource path="res://assets/shaders/color_flash.tres" type="Material" id=23]
[ext_resource path="res://assets/sound/sfx/sfx_punch4.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/sound/sfx/sfx_punch5.wav" type="AudioStream" id=25]
[ext_resource path="res://assets/sound/sfx/sfx_punch6.wav" type="AudioStream" id=26]
[ext_resource path="res://assets/sprites/metalpartical_2.png" type="Texture" id=27]

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.5, 61.5 )

[sub_resource type="CapsuleShape2D" id=26]
height = 92.0

[sub_resource type="Animation" id=18]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Curve" id=23]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=25]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.00681818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=24]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="EnemyDummy" type="KinematicBody2D"]
collision_layer = 10
collision_mask = 10
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 23 )
position = Vector2( 0, -35 )
scale = Vector2( 0.56, 0.56 )
frames = SubResource( 22 )
animation = "idle"
frame = 1

[node name="collison" type="CollisionShape2D" parent="."]
position = Vector2( 0, -34.5 )
shape = SubResource( 2 )

[node name="hitcheck" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="check" type="CollisionShape2D" parent="hitcheck"]
modulate = Color( 0.360784, 1, 0, 1 )
position = Vector2( 0, -32 )
shape = SubResource( 26 )

[node name="hurt1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -6.55
bus = "SFX"
script = ExtResource( 11 )

[node name="hurt2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -10.92
bus = "SFX"
script = ExtResource( 11 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -33, 1 )
enabled = true
cast_to = Vector2( 0, 110 )
collision_mask = 2
collide_with_areas = true

[node name="hurt3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 11 )

[node name="walldec" type="RayCast2D" parent="."]
position = Vector2( -5, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2
collide_with_areas = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 18 )

[node name="tilcheck" type="RayCast2D" parent="."]
position = Vector2( 0, 27 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 1024
collide_with_areas = true

[node name="hurt4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 11 )

[node name="hurt5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 11 )

[node name="hurt6" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 11 )

[node name="hurt7" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 11 )

[node name="hitpart1" type="CPUParticles2D" parent="."]
emitting = false
amount = 2
lifetime = 5.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
fract_delta = false
local_coords = false
draw_order = 1
texture = ExtResource( 4 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity = 296.47
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 20.0
angle = 720.0
angle_random = 1.0
angle_curve = SubResource( 23 )
scale_amount_random = 1.0
scale_amount_curve = SubResource( 25 )
color_ramp = SubResource( 24 )

[node name="hitpart2" type="CPUParticles2D" parent="."]
emitting = false
amount = 2
lifetime = 5.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
local_coords = false
draw_order = 1
texture = ExtResource( 27 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity = 296.47
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 20.0
angle = 720.0
angle_random = 1.0
angle_curve = SubResource( 23 )
scale_amount_random = 1.0
scale_amount_curve = SubResource( 25 )
color_ramp = SubResource( 24 )

[node name="hitpart3" type="CPUParticles2D" parent="."]
emitting = false
amount = 2
lifetime = 5.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
local_coords = false
draw_order = 1
texture = ExtResource( 5 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity = 296.47
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 20.0
angle = 720.0
angle_random = 1.0
angle_curve = SubResource( 23 )
scale_amount_random = 1.0
scale_amount_curve = SubResource( 25 )
color_ramp = SubResource( 24 )

[node name="hitpart4" type="CPUParticles2D" parent="."]
emitting = false
amount = 2
lifetime = 5.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
fract_delta = false
local_coords = false
draw_order = 1
texture = ExtResource( 6 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity = 296.47
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 20.0
angle = 720.0
angle_random = 1.0
angle_curve = SubResource( 23 )
scale_amount_random = 1.0
scale_amount_curve = SubResource( 25 )
color_ramp = SubResource( 24 )

[connection signal="area_entered" from="hitcheck" to="." method="_on_hitcheck_area_entered"]
